CSS ANgepasst dark mode + Icons